terraform-modules/secure-validator/main_azure.tf
variable "public2_prefix" {
  default = "sv-public2"
}

resource "azurerm_resource_group" "main" {
  name     = "${var.public2_prefix}-resources"
  location = var.azure_region
}

resource "azurerm_virtual_network" "main" {
  name                = "${var.public2_prefix}-network"
  address_space       = ["10.0.0.0/16"]
  location            = "${azurerm_resource_group.main.location}"
  resource_group_name = "${azurerm_resource_group.main.name}"
}

resource "azurerm_subnet" "internal" {
  name                 = "internal"
  resource_group_name  = "${azurerm_resource_group.main.name}"
  virtual_network_name = "${azurerm_virtual_network.main.name}"
  address_prefix       = "10.0.2.0/24"
}

resource "azurerm_network_interface" "main" {
  name                = "${var.public2_prefix}-nic"
  location            = "${azurerm_resource_group.main.location}"
  resource_group_name = "${azurerm_resource_group.main.name}"

  ip_configuration {
    name                          = "testconfiguration1"
    subnet_id                     = "${azurerm_subnet.internal.id}"
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id          = "${azurerm_public_ip.main.id}"
  }
}

resource "azurerm_public_ip" "main" {
  name                    = "${var.public2_prefix}-ip"
  location                = "${azurerm_resource_group.main.location}"
  resource_group_name     = "${azurerm_resource_group.main.name}"
  allocation_method       = "Dynamic"
  idle_timeout_in_minutes = 30

  tags = {
    name = var.public2_prefix
  }
}

resource "azurerm_virtual_machine" "main" {
  name                  = "${var.public2_prefix}-vm"
  location              = "${azurerm_resource_group.main.location}"
  resource_group_name   = "${azurerm_resource_group.main.name}"
  network_interface_ids = ["${azurerm_network_interface.main.id}"]
  vm_size               = "Standard_DS1_v2"

  delete_os_disk_on_termination = true

  delete_data_disks_on_termination = true

  storage_image_reference {
    publisher = "Canonical"
    offer     = "UbuntuServer"
    sku       = "18.04-LTS"
    version   = "latest"
  }
  storage_os_disk {
    name              = "myosdisk1"
    caching           = "ReadWrite"
    create_option     = "FromImage"
    managed_disk_type = "Standard_LRS"
  }
  os_profile {
    computer_name = var.public2_prefix
    admin_username = var.ssh_user
  }

  os_profile_linux_config {
    disable_password_authentication = true
    ssh_keys {
      key_data = var.public2_public_key
      path     = "/home/${var.ssh_user}/.ssh/authorized_keys"
    }
  }
  tags = {
    name = var.public2_prefix
  }
}

data "azurerm_public_ip" "main" {
  name                = var.public2_prefix
  resource_group_name = "${azurerm_virtual_machine.main.resource_group_name}"
}

resource "azurerm_firewall" "main" {
  name                = var.public2_prefix
  location            = "${azurerm_resource_group.main.location}"
  resource_group_name = "${azurerm_resource_group.main.name}"

  ip_configuration {
    name                 = "configuration"
    subnet_id            = "${azurerm_subnet.main.id}"
    public_ip_address_id = "${azurerm_public_ip.main.id}"
  }
}

resource "azurerm_firewall_network_rule_collection" "main" {
  name                = var.public2_prefix
  azure_firewall_name = "${azurerm_firewall.main.name}"
  resource_group_name = "${azurerm_resource_group.main.name}"
  priority            = 100
  action              = "Allow"

  rule {
    name = "externalaccess"

    source_addresses = [
      "0.0.0.0/0",
    ]

    destination_ports = [
      "22", "30333","51820"
    ]

    destination_addresses = [
      "0.0.0.0/0",
    ]

    protocols = [
      "TCP",
      "UDP",
    ]
  }
}
